[package]
name = "clap-with-warnings"
version = "0.1.2"
edition = "2021"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
license = "MIT OR Apache-2.0"
description = "Retain unused field warnings when using Clap"
repository = "https://github.com/pflanze/clap-with-warnings"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
